--- a/components/NavBar.scss
+++ b/components/NavBar.scss
@@ -80,7 +80,7 @@
       display: flex;
       gap: 1.5625rem;
       align-items: center;
-      background-image: url("assets/icon-chevron.svg");
+      background-image: url("/assets/icon-chevron.svg");
       background-repeat: no-repeat;
       background-position: right 0.5rem center;
       color: var(--white);
