--- a/src/index.scss
+++ b/src/index.scss
@@ -109,7 +109,7 @@ select {
 
 body {
   background-color: var(--pale-blue-800);
-  background-image: url("assets/background-stars.svg");
+  background-image: url("/assets/background-stars.svg");
   background-position: center top;
   color: var(--white);
   font-family: var(--ff-sans-serif);
