--- a/components/Tabs.scss
+++ b/components/Tabs.scss
@@ -1,4 +1,6 @@
 .tab-container {
+  counter-reset: tab;
+
   @media only screen and (max-width: 47.9375em) {
     border-bottom: 1px solid hsl(0 100% 100% / 0.2);
     padding-inline: 1.5rem;
@@ -7,39 +9,69 @@
   &__inner {
     display: flex;
     justify-content: space-between;
+
+    @media only screen and (min-width: 48em) {
+      flex-direction: column;
+      gap: 1rem;
+    }
   }
-}
 
-.tab {
-  position: relative;
-  color: var(--gray-400);
-  font-weight: 500;
-  text-transform: uppercase;
-  font-size: 0.75rem;
-  letter-spacing: 0.175em;
-  padding-block: 1.375em;
+  .tab {
+    position: relative;
+    color: var(--gray-400);
+    font-weight: 500;
+    text-transform: uppercase;
+    font-size: 0.75rem;
+    letter-spacing: 0.175em;
+    padding-block: 1.375em;
 
-  @media only screen and (max-width: 47.9375em) {
-    &.active {
+    @media only screen and (max-width: 47.9375em) {
+      &.active {
+        color: var(--white);
+      }
+
+      &.active::after {
+        content: "";
+        position: absolute;
+        inset: auto 0 0 0;
+        height: 0.25rem;
+        background-color: var(--color);
+      }
+    }
+
+    @media only screen and (min-width: 48em) {
+      width: 100%;
+      border: 1px solid hsl(0 100% 100% / 0.2);
+      padding: 1em 1.75em;
+      text-align: left;
       color: var(--white);
-    }
 
-    &.active::after {
-      content: "";
-      position: absolute;
-      inset: auto 0 0 0;
-      height: 0.25rem;
-      background-color: var(--color);
-    }
-  }
+      &:hover {
+        background-color: hsl(0 100% 100% / 0.2);
+        border-color: transparent;
+      }
 
-  @media only screen and (min-width: 48em) {
-    &[data-type="structure"]::before {
-      content: "Internal ";
-    }
+      &.active {
+        background-color: var(--color);
+        border-color: transparent;
+      }
 
-    &[data-type="geology"]::after {
-      content: " Geology";
+      // Counter
+      &::before {
+        counter-increment: tab;
+        content: "0" counter(tab);
+        margin-right: 1rem;
+        color: hsl(0 100% 100% / 0.5);
+      }
+
+      // Display extra text at larger sizes
+      &[data-type="structure"] .text::before {
+        content: "Internal ";
+      }
+
+      &[data-type="geology"] .text::after {
+        content: " Geology";
+      }
     }
   }
 }
