--- a/components/Stats.scss
+++ b/components/Stats.scss
@@ -23,13 +23,9 @@
 
     &__value {
       font-family: var(--ff-serif);
-      font-size: 1.375rem;
+      font-size: clamp(1.25rem, calc(0.38rem + 2.35vw), 2.5rem);
       color: var(--white);
       letter-spacing: 0;
-
-      @media only screen and (min-width: 48em) {
-        font-size: 1.5rem;
-      }
     }
 
     @media only screen and (min-width: 48em) {
@@ -37,7 +33,7 @@
       align-items: start;
       flex: 1 0;
       gap: 0.5em;
-      padding: 1.5em 1.25em;
+      padding: 1.75em 1.5em;
     }
   }
 }
